# simple_downloader

./: .gitignore  Cargo.toml  README.md
examples/: download.rs  with_custom_ui.rs
src/: chunk.rs  concurrency.rs  downloader.rs  file.rs  lib.rs  monitor.rs  old.rs  resource.rs  retry.rs  state.rs  types.rs  util.rs
