[package]
name = "simple_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12.23", features = ["stream"] }
futures-util = "0.3.31"
bytes = "1.10.1"
thiserror = "2.0.16"
faststr = "0.2.32"
rand = "0.9.2"
log = "0.4.28"

[dev-dependencies]
indicatif = { version = "0.18.0", features = ["tokio"] }
env_logger = "0.11.8"